--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -612,7 +612,7 @@
       formData.append("job_role", jobRole);
 
       try {
-        const response = await fetch("https://resume-reviewer-tool.netlify.app/upload-resume/", {
+        const response = await fetch("http://127.0.0.1:8000/upload-resume/", {
           method: "POST",
           body: formData,
         });
